--- a/resources/scss/layouts/_header.scss
+++ b/resources/scss/layouts/_header.scss
@@ -1,7 +1,7 @@
 .topbar {
+    padding: 1.5rem;
     background-color: #f0f4f8;
     color: #8e9092;
     text-align: center;
-    line-height: 60px;
     font-weight: $font-weight-bold;
 }
